--- a/GovTech/index.html
+++ b/GovTech/index.html
@@ -76,17 +76,17 @@
         <input type="checkbox" name="myCheckbox">
         <span class="slider round"></span>
     </label>
-    <script>
-        var _selector = document.querySelector('input[name=myCheckbox]');
-        _selector.addEventListener('change', function(event) {
-            var message = (_selector.checked) ? "Toggle Switch is on" : "Toggle Switch is off";
-            if (window.webkit && window.webkit.messageHandlers && window.webkit.messageHandlers.toggleMessageHandler) {
-                window.webkit.messageHandlers.toggleMessageHandler.postMessage({
-                    "message": message
-                });
-            }
-        });
-    </script>
+<!--    <script>-->
+<!--        var _selector = document.querySelector('input[name=myCheckbox]');-->
+<!--        _selector.addEventListener('change', function(event) {-->
+<!--            var message = (_selector.checked) ? "Toggle Switch is on" : "Toggle Switch is off";-->
+<!--            if (window.webkit && window.webkit.messageHandlers && window.webkit.messageHandlers.toggleMessageHandler) {-->
+<!--                window.webkit.messageHandlers.tokenUpdateHandler.postMessage({-->
+<!--                    "message": message-->
+<!--                });-->
+<!--            }-->
+<!--        });-->
+<!--    </script>-->
 </body>
 
 </html>
